# cpp-env

./: .gitignore  AGENTS.md  README.md
apps/quiz/android-quiz-app/src-tauri/: .gitignore  Cargo.toml  tauri.android.conf.json  tauri.conf.json
apps/quiz/android-quiz-app/src-tauri/src/: main.rs
apps/quiz/quiz-vulkan/: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
apps/quiz/quiz-vulkan/agent/: command_brief.json
apps/quiz/quiz-vulkan/docs/: architecture.md  domain-contract.md  scene-schema.md  test-plan.md
apps/quiz/quiz-vulkan/src/app/: AGENTS.md  app.cpp  app.h  app_action_router.cpp  app_action_router.h  app_deck_loader.cpp  app_deck_loader.h  app_demo.cpp  app_demo.h  app_image_texture_payloads.cpp  app_image_texture_payloads.h  app_input_router.cpp  app_input_router.h  app_quiz_screens.h  app_quiz_screens.hpp  app_render_pipeline.h  app_sound_router.h  app_state.cpp  app_state.h  main.cpp
apps/quiz/quiz-vulkan/src/assets/: AGENTS.md  asset_bytes_contract.h  asset_bytes_provider.h  asset_manifest.h  asset_manifest_version_policy.h  asset_pack_index.h  asset_pack_validation.h  asset_path_policy.h  asset_render_resource_address.h  asset_render_resource_payload_bridge.h  asset_resolver.h  asset_runtime_catalog.h  asset_runtime_resolver_policy.h  asset_shader_byte_pipeline_source_summary.h  asset_typed_materialized_bytes.h  deck_source_asset_adapter.cpp  deck_source_asset_adapter.h
apps/quiz/quiz-vulkan/src/audio/: AGENTS.md  audio_engine.h  sound_definition.h  sound_event.h
apps/quiz/quiz-vulkan/src/core/domain/: app_action.cpp  app_action.hpp  app_snapshot.cpp  app_snapshot.hpp  deck_artifact_loader.cpp  deck_artifact_loader.hpp  deck_source.h  learning_state.cpp  learning_state.hpp  quiz_model.cpp  quiz_model.hpp  quiz_session.cpp  quiz_session.hpp
apps/quiz/quiz-vulkan/src/core/input/: AGENTS.md  gesture_recognizer.cpp  gesture_recognizer.h  input_action_candidate_plan.h  input_engine.cpp  input_engine.h  input_event.h  input_key_policy.h  input_pointer_policy.h  input_routing_diagnostics.h  input_text_route_policy.h  normalized_input_replay.h  normalized_input_replay_diff.h  normalized_input_replay_diff_policy.h  platform_input_engine_adapter.h  platform_input_replay.h  platform_input_translator.h  text_edit_transaction_diagnostics.h  text_edit_transaction_replay.h  text_input_model.cpp  text_input_model.h  text_input_presentation.h  text_input_types.h
apps/quiz/quiz-vulkan/src/core/layout/: AGENTS.md  input_hit_test.h  layout_placer.h
apps/quiz/quiz-vulkan/src/core/ui/: AGENTS.md  (+4 more)
apps/quiz/quiz-vulkan/src/platform/: linux_platform_shell.cpp  null_platform_shell.cpp  platform_input_event.h  platform_shell.h  windows_platform_shell.cpp
apps/quiz/quiz-vulkan/src/render/: render_draw_list.h
apps/quiz/quiz-vulkan/tests/: test_manifest.json
apps/quiz/quiz-vulkan/tests/app/: app_action_router_tests.cpp  app_deck_loader_tests.cpp  app_demo_tests.cpp  app_input_router_tests.cpp  app_quiz_screens_tests.cpp  app_render_pipeline_interface_contract_tests.cpp  app_sound_router_interface_contract_tests.cpp  app_sound_router_tests.cpp  app_state_tests.cpp
apps/quiz/quiz-vulkan/tests/architecture/: architecture_boundary_tests.cpp
apps/quiz/quiz-vulkan/tests/assets/: asset_bytes_provider_interface_contract_tests.cpp  asset_bytes_provider_tests.cpp  asset_manifest_interface_contract_tests.cpp  asset_manifest_tests.cpp  asset_pack_fallback_policy_tests.cpp  asset_pack_index_interface_contract_tests.cpp  asset_pack_index_tests.cpp  asset_pack_lookup_policy_tests.cpp  asset_pack_validation_interface_contract_tests.cpp  asset_pack_validation_tests.cpp  asset_path_policy_interface_contract_tests.cpp  asset_path_policy_tests.cpp  asset_resolver_interface_contract_tests.cpp  asset_resolver_tests.cpp  asset_runtime_catalog_interface_contract_tests.cpp  asset_runtime_catalog_tests.cpp  asset_runtime_resolver_policy_interface_contract_tests.cpp  asset_runtime_resolver_policy_tests.cpp  deck_source_asset_adapter_interface_contract_tests.cpp  deck_source_asset_adapter_tests.cpp
apps/quiz/quiz-vulkan/tests/audio/: audio_engine_interface_contract_tests.cpp  audio_mixer_event_tests.cpp  fake_audio_engine_tests.cpp  procedural_audio_engine_tests.cpp
apps/quiz/quiz-vulkan/tests/contracts/: interface_contract_compile_tests.cpp
apps/quiz/quiz-vulkan/tests/domain/: deck_artifact_loader_tests.cpp  deck_source_interface_contract_tests.cpp  domain_smoke_test.cpp
apps/quiz/quiz-vulkan/tests/input/: gesture_recognizer_tests.cpp  input_action_candidate_plan_tests.cpp  input_engine_gesture_diagnostics_tests.cpp  input_engine_ime_tests.cpp  input_engine_interface_contract_tests.cpp  input_engine_keyboard_text_tests.cpp  input_engine_tests.cpp  input_engine_touch_arbitration_tests.cpp  normalized_input_replay_diff_policy_tests.cpp  normalized_input_replay_tests.cpp  platform_input_boundary_tests.cpp  platform_input_engine_adapter_tests.cpp  platform_input_replay_tests.cpp  platform_input_translator_tests.cpp  text_edit_transaction_replay_tests.cpp  text_input_model_tests.cpp
apps/quiz/quiz-vulkan/tests/layout/: input_hit_test_tests.cpp  layout_placer_interface_contract_tests.cpp  layout_placer_tests.cpp
apps/quiz/quiz-vulkan/tests/persistence/: learning_state_store_interface_contract_tests.cpp
apps/quiz/quiz-vulkan/tests/platform/: platform_shell_interface_contract_tests.cpp
apps/quiz/quiz-vulkan/tests/render/: fake_image_texture_cache_tests.cpp  fake_text_engine_tests.cpp  vulkan_renderer_tests.cpp
apps/quiz/quiz-vulkan/tests/scene/: scene_layout_data_tests.cpp  scene_layout_interface_contract_tests.cpp  scene_modifier_interface_contract_tests.cpp
apps/quiz/quiz-vulkan/tests/theme/: theme_tokens_interface_contract_tests.cpp
apps/quiz/quiz-vulkan/tests/ui/: quiz_screens_tests.cpp  ui_renderer_interface_contract_tests.cpp
apps/quiz/quiz-vulkan/tests/workers/: external_worker_artifact_interface_contract_tests.cpp
apps/quiz/quiz-vulkan/tools/: run_mingw_scene_layout_smoke.ps1  run_mingw_scene_layout_smoke.sh  run_windows_mingw_ascii.ps1
(+649 files in other folders)
